Make minor changes to prevent overflow

--- a/style.css
+++ b/style.css
@@ -44,17 +44,18 @@ body{
 .display p{
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
   overflow: auto;
 }
 .display--first{
   margin-top: 3.5rem;
-  height: 6rem;
+  height: 7.5rem;
   padding: 0 1rem;
 }
 .display--second{
   padding: 0 1rem;
   margin-top: 1rem;
-  height: 3rem;
+  height: 3.5rem;
   font-size: 2rem;
 }
 .buttons{
